<resources>
    <string name="app_name">Wildhack</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_form">Регистрация</string>

    <string name="question_in_main">Как мы можем к вам обращаться?</string>
    <string name="question_in_connect">Как с вами связаться?</string>

    <string name="text_under_first_question">Введите ваши данные как в паспорте</string>

    <string name="fio_example">Иванов Иван Иванович</string>
    <string name="fio">ФИО</string>
    <string name="save">Сохранить</string>
    <string name="birth_example">дд/мм/гггг</string>
    <string name="label_birth">Дата рождения</string>
    <string name="mail_label">Ваш адрес эл. почты</string>
    <string name="email_example">email@example.com</string>
    <string name="social_network_label">ссылка на профили любимой соцсети</string>
    <string name="phone_label">Номер телефона(Telegramm)</string>
    <string name="phone_example">+7(___) ___-__-__</string>
    <string name="question_living">Где ты живешь?</string>
    <string name="living_place_label">Край/область, населенный пункт</string>
    <string name="living_place_example">Место жительства</string>
    <string name="privacy_policy">Я согласен с <u>политикой использования перснональных данных</u></string>
    <string name="text_in_check">Прогресс</string>
    <string name="about_oneself">Рассказать о себе</string>
    <string name="test_text">Пройти тест</string>
    <string name="skills">Указать свои навыки</string>
    <string name="creative">Творческое задание</string>
    <string name="let_meet">Давайте познакомимся</string>
    <string name="meet_description_1">Вам предстоит рассказать о себе и своем походном опыте, заполнив форму.</string>
    <string name="meet_description_2">Нам это нужно, чтобы выбрать лучших кандидатов.</string>
    <string name="start_test">Начать тестирование</string>
    <string name="Test">Тест</string>
    <string name="test_description">Здесь будут представлены вопросы, которые помогут нам понять в какой роли вам будет комфортней всего. Пожайлуста, отвечайте честно</string>
    <string name="question_skills">Какие у вас навыки?</string>
    <string name="skills_description_1">А теперь самое время определиться с твоим местом в коллективе</string>
    <string name="skills_description_2">Пожалуйста, отвечайте честно, чтобы получить удовольствие от волонтерской деятельности.</string>
    <string name="creative_description_1">Ответь сам себе: зачем тебе Школа защитников природы? Зачем ты Школе защитников природы? Что ты хочешь получить от обучения и от волонтёрской практики?</string>
    <string name="creative_description_2">Ответ запиши в форме видео (не более 2 минут), текста (до 5000 знаков), или презентации. Так же это может быть рисунок или ещё что-то творческое.</string>
    <string name="load_file">загрузить файл</string>
    <string name="continue_text">Продолжить</string>
    <string name="text_in_question_example">Здесь будет какой-то текст</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="finish">Завершить</string>
    <string name="creqtive_question_text">Возможно, твой ответ на предыдущий вопрос (рисунок, видео, цитата из текста) нам захочется опубликовать в социальных сетях Школы. Ты даёшь нам такое право?</string>
    <string name="about_fragment">Расскажи о себе</string>
    <string name="doing_example">Сфера деятельности, профессия, направление учёбы</string>
    <string name="doing_label">Чем ты занимаешься?</string>
    <string name="travel_experience">Какой у тебя походный опыт?</string>
    <string name="question_distant_point">Какую самую дальнюю точку России ты посетил?</string>
    <string name="point_label">Название</string>
    <string name="complete">Ура, ты справился!</string>
    <string name="complete_def">Мы обязательно свяжемся с тобой не позднее, чем за сутки до начала очередной смены, чтобы пригласить на занятия или предложить попробовать ещё раз в одну из следующих смен.\nСпасибо тебе, что так внимательно ответил на все вопросы!</string>
    <string name="about_yourself">Сфера деятельности, проффесия, направление учёбы</string>
    <string name="about_school">Откуда ты узнал о Школе?</string>
    <string name="about_school_button">Продолжить</string>
    <string name="social_network">Социальная сеть</string>
    <string name="dobro_site">dobro.ru</string>
    <string name="good_surfing">Goodsurfing</string>
    <string name="green_board">Greenboard</string>
    <string name="from_friends">от знакомых</string>
    <string name="other">Другое:</string>
    <string name="description_campaign_experience">Опиши свой походный опыт</string>
    <string name="distant_place">Горный массив Вачкажец</string>
    <string name="criteria_for_volunteering">По каким критериям ты выбираешь волонтерские проекты?</string>
    <string name="criteria_for_job">Расскажи, пожалуйста, чем ты руководствовался при выборе ВУЗа/ будущей профессии?</string>
    <string name="important_of_job">Что для тебя самое важное в твоей профессии? Почему ты занимаешься именно этим?</string>
    <string name="yourself_skills">Какие из перечисленных навыков вам присущи?</string>
    <string name="other_skills">Есть ли у вас навыки, которых не было в анкете?</string>
    <string name="save_skills_answer">Ваши ответы сохранены</string>
    <string name="save_skills_1">Далее вам предстоит рассказать о себе и своем походном опыте, заполнив форму с большим количеством вопросов.</string>
    <string name="save_skills_2">Нам это нужно, чтобы выбрать лучших кандидатов.</string>
    <string name="save_skills_btn">Завершить</string>
    <string name="need_your_id">Нам нужен ваш ID</string>
    <string name="get_start_education">Чтобы приступить к обучению, пройдите регистрацию на сайте <u>dobro.ru</u></string>
    <string name="your_id_on_dobro_ru">Ваш ID на <u>dobro.ru</u></string>
    <string name="tutorials">Обучающие материалы</string>
    <string name="les_one">Урок №1</string>
    <string name="les_one_theme">Название темы 1</string>
    <string name="les_two">Урок №2</string>
    <string name="les_two_theme">Название темы 2</string>
    <string name="les_three">Урок №3</string>
    <string name="les_three_theme">Название темы 3</string>
    <string name="final_test">Итоговый тест</string>
    <string name="test1_ans">0/3 ответов</string>
    <string name="test1">Тест для волонтера</string>
    <string name="lesson_one_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="Welcome_volunteer">Добро пожаловать, доброволец!</string>
    <string name="welcome_start">Перед регистрацией, рекомендуем ознакомиться с часто задавамыми вопросами</string>
    <string name="faq">FAQ</string>
    <string name="equipments">Необходимое снаряжение</string>
    <string name="package_documents">Пакет документов</string>
    <string name="accommodation_options">Варианты проживания</string>
    <string name="сardon_information">Информация о кардонах</string>
    <string name="faq_ex">Часто задаваемые вопросы</string>
    <string name="item_page_q">Я всегда держусь своих принципов и убеждений.</string>
    <string name="collection_data">Ты даешь нам право на сбор и обработку твоих персональных данных</string>
    <string name="Ok">ок</string>
    <string name="tv_eq1">• Походное снаряжение</string>
    <string name="tv_eq2">• Биоразлагаемые средства гигиены</string>
    <string name="tv_eq3">• Водоотталкивающая одежда и обувь</string>
    <string name="accomodation_desc">***  Список и контакты отелей, г.Елизово:\n
• Мини-отель "АМТО" ул. Ленина, 32, Елизово, Камчатский край,
684300•\n8 (924) 585-35-35, стоимость от 1500 рублей\n
• Вила Хостел, Уральская ул., дом 2, Камчатский край, 684007,\n
 8 (963) 833-22-32, стоимость от 2000 рублей\n
• Хостел Камчатский Стиль, ул. Беринга, 26, Елизово, Камчатский
край,
 684000•\n8 (951) 290-67-42, стоимость от 3000 рублей
</string>
    <string name="documents_pac">Пакет Документов</string>
    <string name="document_1">• Договор</string>
    <string name="document_2">• Мед. справка</string>
    <string name="document_3">• Рассказ о себе</string>
    <string name="info_cardon">Информация о кордонах</string>
    <string name="link_on_socialnetwork">Link on socialNetwork</string>
</resources>