<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HelloFragment">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Welcome_volunteer"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_start"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/textView1" />
    <LinearLayout
        android:id="@+id/ll_reg1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">
        <ImageView
            android:id="@+id/iv_reg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_question_answer_40"
            android:layout_weight="0.1"/>

        <TextView
            android:layout_marginStart="0dp"
            android:id="@+id/tv_reg1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:text="@string/faq"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_reg2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/ll_reg1"
        app:layout_constraintVertical_bias="0.0">
        <ImageView
            android:id="@+id/iv_reg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_cases_40"
            android:layout_weight="0.1"/>

        <TextView
            android:layout_marginStart="0dp"
            android:id="@+id/tv_reg2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:text="@string/equipments"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_reg3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/ll_reg2"
        app:layout_constraintVertical_bias="0.0">
        <ImageView
            android:id="@+id/iv_reg3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_text_snippet_40"
            android:layout_weight="0.1"/>

        <TextView
            android:layout_marginStart="0dp"
            android:id="@+id/tv_reg3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:text="@string/package_documents"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_reg4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/ll_reg3"
        app:layout_constraintVertical_bias="0.0">
        <ImageView
            android:id="@+id/iv_reg4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_house_40"
            android:layout_weight="0.1"/>

        <TextView
            android:layout_marginStart="0dp"
            android:id="@+id/tv_reg4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:text="@string/accommodation_options"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_reg5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/ll_reg4"
        app:layout_constraintVertical_bias="0.0">
        <ImageView
            android:id="@+id/iv_reg5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_40"
            android:layout_weight="0.1"/>

        <TextView
            android:layout_marginStart="0dp"
            android:id="@+id/tv_reg5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:text="@string/сardon_information"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_start_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_form"
        android:backgroundTint="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="content_end"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="content_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

</androidx.constraintlayout.widget.ConstraintLayout>